<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/topic_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/topic_img"
                android:layout_width="@dimen/tab_size"
                android:layout_height="@dimen/tab_size"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@drawable/topic_selector" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/video_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/video_img"
                android:layout_width="@dimen/tab_size"
                android:layout_height="@dimen/tab_size"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@drawable/video_selector" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1" />


        <RelativeLayout
            android:id="@+id/login_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/login_img"
                android:layout_width="@dimen/tab_size"
                android:layout_height="@dimen/tab_size"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@drawable/login_selector" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/main_fragment_stub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation" />

    <View
        android:id="@+id/main_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000" />

    <FrameLayout
        android:id="@+id/temperature_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <com.uc.ronrwin.uctopic.widget.CloseTemperatureLayout
            android:id="@+id/close_button"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <ImageView
            android:id="@+id/temperature_icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/temperature_height"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/mist" />

        <TextView
            android:id="@+id/temperature_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/temperature_desc"
            android:textColor="@color/temperature_black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:scaleY="1.3"
            android:text="@string/temperature"
            android:textColor="@color/temperature_black"
            android:textSize="36dp"
            android:textStyle="bold"
            android:translationY="40dp" />

        <LinearLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/location"
                android:textColor="@color/temperature_black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/temperature_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/wind_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleY="1.3"
                    android:text="@string/wind_strength"
                    android:textColor="@color/temperature_black"
                    android:textSize="@dimen/temperature_middle"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/gray_1"
                    android:textSize="@dimen/temperature_extra_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weather_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleY="1.3"
                    android:text="@string/temperature_range"
                    android:textColor="@color/temperature_black"
                    android:textSize="@dimen/temperature_middle"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:textColor="@color/gray_1"
                    android:textSize="@dimen/temperature_extra_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/air_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleY="1.3"
                    android:text="@string/air_quality_num"
                    android:textColor="@color/temperature_black"
                    android:textSize="@dimen/temperature_middle"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air_quality"
                    android:textColor="@color/gray_1"
                    android:textSize="@dimen/temperature_extra_small" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</RelativeLayout>
